// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-avo-inspector destination: sendSchemaToInspector action - all fields 1`] = `
Array [
  Object {
    "appName": "o5omS$Qs",
    "appVersion": "o5omS$Qs",
    "createdAt": "o5omS$Qs",
    "eventHash": null,
    "eventId": null,
    "eventName": "o5omS$Qs",
    "eventProperties": Array [
      Object {
        "propertyName": "testType",
        "propertyType": "string",
      },
    ],
    "libPlatform": "Segment",
    "libVersion": "1.0.0",
    "messageId": "o5omS$Qs",
    "sessionId": "_",
    "type": "event",
  },
]
`;

exports[`Testing snapshot for actions-avo-inspector destination: sendSchemaToInspector action - required fields 1`] = `
Array [
  Object {
    "appName": "unnamed Segment app",
    "appVersion": "unversioned",
    "createdAt": "o5omS$Qs",
    "eventHash": null,
    "eventId": null,
    "eventName": "o5omS$Qs",
    "eventProperties": Array [
      Object {
        "propertyName": "testType",
        "propertyType": "string",
      },
    ],
    "libPlatform": "Segment",
    "libVersion": "1.0.0",
    "messageId": "o5omS$Qs",
    "sessionId": "_",
    "type": "event",
  },
]
`;
